Modifiers (skin, armature, hook) not drawing in editmode #57351

Closed
opened 2018-10-23 11:30:35 +02:00 by Philipp Oeser · 6 comments
Member

System Information
Fedora 28, 970m, 396.45 driver

Blender Version
Broken: 6add652c38
Worked: 60d7740fe6

Short description of error
skin modifier (hook, armature as well) wont draw in editmode [show_in_editmode]

Exact steps for others to reproduce the error
Open bug.blend from report #57283 and see (of fail to see) the resulting mesh drawn in editmode.
That file is using a skin modifier, but same is true for hook and armature modifiers.

caused by 6add652c38

Will have a look myself...

**System Information** Fedora 28, 970m, 396.45 driver **Blender Version** Broken: 6add652c38 Worked: 60d7740fe6 **Short description of error** skin modifier (hook, armature as well) wont draw in editmode [`show_in_editmode`] **Exact steps for others to reproduce the error** Open `bug.blend` from report #57283 and see (of fail to see) the resulting mesh drawn in editmode. That file is using a skin modifier, but same is true for hook and armature modifiers. caused by 6add652c38 Will have a look myself...
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-10-23 11:31:29 +02:00
Author
Member

correction:

commit that broke armature and hook editmode drawing: c61142c0b5

correction: commit that broke armature and hook editmode drawing: c61142c0b5
Philipp Oeser removed their assignment 2018-10-23 13:42:33 +02:00
Campbell Barton was assigned by Philipp Oeser 2018-10-23 13:42:33 +02:00
Author
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author
Member

D3824 might help?, regarding hook and armature: I guess this is in better hands if @ideasman42 has a look...

[D3824](https://archive.blender.org/developer/D3824) might help?, regarding `hook` and `armature`: I guess this is in better hands if @ideasman42 has a look...

This issue was referenced by 4b2b8a0c3f

This issue was referenced by 4b2b8a0c3fdcd190cf91b304239a73e4c4fca80c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57351
No description provided.