Fix T57351: Deform modifiers skipped in editmode